# tap-memberful

./: .gitignore  README.md  meltano.yml  pyproject.toml  tap-memberful.sh  tox.ini
tap_memberful/: client.py  streams.py  tap.py
tap_memberful/tests/: __init__.py  test_core.py
