[tool.poetry]
name = "tap-memberful"
version = "0.0.1"
description = "`tap-memberful` is a Singer tap for Memberful, built with the Meltano SDK for Singer Taps."
authors = ["Prratek Ramchandani"]
keywords = [
    "ELT",
    "Memberful",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.10,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "^0.3.13"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.25.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-memberful = 'tap_memberful.tap:TapMemberful.cli'
